// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<ChooseLineDropdown /> Opens dropdown when clicked and shows all lines 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state="open"
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-activedescendant="headlessui-combobox-option-:r7:"
      aria-autocomplete="list"
      aria-controls="headlessui-combobox-options-:r6:"
      aria-expanded="true"
      class="relative h-full w-full rounded-md border border-grey bg-white px-2 py-3"
      data-headlessui-state="open"
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:r4:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-controls="headlessui-combobox-options-:r6:"
      aria-expanded="true"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-headlessui-state="open"
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:r5:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        1 (Line1 name)
      </div>
      <svg
        class="ml-auto mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out -rotate-180"
        style="font-size: 10px;"
      />
    </button>
    <div
      aria-labelledby="headlessui-combobox-button-:r5:"
      class="absolute left-0 z-10 w-full rounded-b-md border border-black border-opacity-20 bg-white shadow-md focus:outline-none transition ease-out duration-100 opacity-0 scale-95"
      data-headlessui-state="open"
      id="headlessui-combobox-options-:r6:"
      role="listbox"
    >
      <div
        aria-selected="true"
        data-headlessui-state="active selected"
        id="headlessui-combobox-option-:r7:"
        role="option"
        tabindex="-1"
      >
        <span
          class="bg-background flex group text-left pr-2 py-2 focus:outline-none items-center"
        >
          <svg
            class="mx-1 text-2xl text-black"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
          <div>
            <span>
              1 (Line1 name)
            </span>
            <div
              class="text-sm"
            >
              13.2.2017 - 31.12.2050
            </div>
          </div>
        </span>
      </div>
      <div
        aria-selected="false"
        data-headlessui-state=""
        id="headlessui-combobox-option-:r8:"
        role="option"
        tabindex="-1"
      >
        <span
          class=" flex group text-left pr-2 py-2 focus:outline-none items-center"
        >
          <svg
            class="mx-1 text-2xl invisible"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
          <div>
            <span>
              2 (Line2 name)
            </span>
            <div
              class="text-sm"
            >
              13.2.2017 - 31.12.2050
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Shows correct texts when loading with preselected line 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="relative h-full w-full rounded-md border border-grey bg-white px-2 py-3"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:r0:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:r1:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse linja
      </div>
      <svg
        class="ml-auto mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Shows correct texts when loading with preselected line 2`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="relative h-full w-full rounded-md border border-grey bg-white px-2 py-3"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:r0:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:r1:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        1 (Line1 name)
      </div>
      <svg
        class="ml-auto mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Shows correct texts when loading without pre-selected line 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="relative h-full w-full rounded-md border border-grey bg-white px-2 py-3"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:r2:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:r3:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse linja
      </div>
      <svg
        class="ml-auto mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseLineDropdown /> Shows correct texts when loading without pre-selected line 2`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-headlessui-state=""
    data-testid="ChooseLineDropdown1"
    id="choose-line-combobox"
  >
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      class="relative h-full w-full rounded-md border border-grey bg-white px-2 py-3"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::input"
      id="headlessui-combobox-input-:r2:"
      role="combobox"
      type="text"
      value=""
    />
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-headlessui-state=""
      data-testid="ChooseLineDropdown1::button"
      id="headlessui-combobox-button-:r3:"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse linja
      </div>
      <svg
        class="ml-auto mr-1 text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;
